@@ -1,3 +1,8 @@
+2011-04-07 Alexander Malysh <amalysh at kannel.org>
+    * applied patch that adds support for limiting listening for smsbox connections
+      to specific interface.
+      Thanks to Roman Shterenzon <romanbsd at yahoo.com>.
+
 2011-04-05 Alexander Malysh <amalysh at kannel.org>
     * gw/bb_smscconn.c: fixed last commit.
 
